Add initial loading code

--- a/example_config.ini
+++ b/example_config.ini
@@ -3,6 +3,9 @@
 
 # **Quotes are required around entries in lists**
 
+[general]
+database_location = "~/.netzero/data.sqlite3"
+
 [pepco]
 # This is a list of files containing your Pepco green button data files.
 # These files can be obtained in XML format from Pepco's website
