--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ clap = "2.33"
 time = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
+serde_json = "1.0"
+crossbeam = "0.7"
